--- a/wellbeing-mobile-app/package.json
+++ b/wellbeing-mobile-app/package.json
@@ -41,6 +41,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "styled-components": "^6.1.17",
     "yup": "^1.6.1"
   },
   "devDependencies": {
